Clean up frontend
Remove Django/Vue default images/text

--- a/templates/base.html
+++ b/templates/base.html
@@ -3,17 +3,16 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Django Vue MPA</title>
+    <title>ADAPT</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
-  <h1>Django Vue MPA</h1>
+  <h1>ADAPT</h1>
   <hr>
   {% block content %}
   {% endblock %}
-  <hr>
 </body>
 
 </html>
