Added detail to run form, header, home; code restructure
Run form now has most inputs; header includes links to all pages (about still not fully made yet); home page has buttons; css reorganized and added to; virus model added to

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,15 +1,27 @@
 <!DOCTYPE html>
 <html lang="">
+{% load static %}
 
 <head>
     <meta charset="utf-8">
     <title>ADAPT</title>
+    <link rel="stylesheet" href="{% static 'vue/css/style.css' %}">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
-  <h1>ADAPT</h1>
+  <div class="header">
+    <div class="desktop menu"><a href="/about">ABOUT</a></div>
+    <div class="desktop menu"><a href="/designs">ASSAYS</a></div>
+    <div class="title"><a href="/">AD<img src="{% static 'vue/img/logo.png' %}" alt="ADAPT Logo" style="height:0.7em">PT</a></div>
+    <div class="desktop menu"><a href="/run">RUN</a></div>
+    <div class="desktop menu"><a href="/results">RESULTS</a></div>
+    <div class="mobile menu"><a href="/about">ABOUT</a></div>
+    <div class="mobile menu"><a href="/designs">ASSAYS</a></div>
+    <div class="mobile menu"><a href="/run">RUN</a></div>
+    <div class="mobile menu"><a href="/results">RESULTS</a></div>
+  </div>
   <hr>
   {% block content %}
   {% endblock %}
