--- a/templates/results.html
+++ b/templates/results.html
@@ -9,6 +9,6 @@
       <app></app>
     </div>
     {% render_bundle 'chunk-vendors' %}
-    {% render_bundle 'adapt' %}
+    {% render_bundle 'results' %}
 
 {% endblock %}
