--- a/vue_frontend/public/css/style.css
+++ b/vue_frontend/public/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,400;0,700;1,400;1,700&family=Aldrich:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
 :root {
   --navy: 0, 13, 84;
@@ -16,7 +16,6 @@
 }
 
 .header {
-  color: rgb(var(--navy));
   text-align: center;
   align-items: center;
   margin: auto;
@@ -36,19 +35,7 @@
   font-size: min(4em, 13vw);
   display: inline;
   vertical-align: middle;
-  font-family: Aldrich, Helvetica, Arial, sans-serif;
-}
-
-body, select, input, button {
-  font-family: Barlow, Helvetica, Arial, sans-serif;
-}
-
-body {
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  margin-left: 5vw;
-  margin-right: 5vw;
-  margin-top: 8px;
+  font-family: Rubik, Helvetica, Arial, sans-serif;
 }
 
 button, input[type=button] {
@@ -56,18 +43,13 @@ button, input[type=button] {
   transition: 0.3s;
 }
 
-.header a {
-  color: inherit;
-  text-decoration: none;
-}
-
-.menu a:hover, .menu a:active {
-  color: rgba(var(--navy), .6);
+.header a:hover, .header a:active {
   transition: 0.3s;
 }
 
-#app {
-  margin-top: 40px;
+.logo {
+  height: 0.85em;
+  padding-bottom: 0.15em;
 }
 
 .mobile {
