--- a/templates/base.html
+++ b/templates/base.html
@@ -6,27 +6,12 @@
   <meta charset="utf-8">
   <title>ADAPT</title>
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="{% static 'vue/css/style.css' %}">
+  <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap" rel="stylesheet">
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body class="m-2">
-  <div class="header">
-    <div class="desktop menu"><a href="/about">ABOUT</a></div>
-    <div class="desktop menu"><a href="/designs">ASSAYS</a></div>
-    <div class="title"><a href="/">AD<img class="logo" src="{% static 'vue/img/logo.png' %}" alt="ADAPT Logo">PT</a></div>
-    <div class="desktop menu"><a href="/run">RUN</a></div>
-    <div class="desktop menu"><a href="/results">RESULTS</a></div>
-    <div class="menuset">
-      <div class="mobile menu"><a href="/about">ABOUT<br></a></div>
-      <div class="mobile menu"><a href="/designs">ASSAYS<br></a></div>
-      <div class="mobile menu"><a href="/run">RUN<br></a></div>
-      <div class="mobile menu"><a href="/results">RESULTS<br></a></div>
-    </div>
-  </div>
-  <hr>
   {% block content %}
   {% endblock %}
 </body>
