--- a/vue_frontend/src/assets/styles.scss
+++ b/vue_frontend/src/assets/styles.scss
@@ -1,11 +1,11 @@
-$font-family-sans-serif:    'Overpass', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
-$input-btn-font-family:     'Rubik', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
+$font-family-sans-serif:            'Overpass', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
+$btn-font-family:                   'Rubik', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
 
-$primary:                   #000d54;
-$secondary:                 #3C67DD;
+$primary:                           #000D54;
+$secondary:                         #3C67DD;
 
-$link-hover-color:          rgba($primary, .6);
-$link-hover-decoration:     none;
+$link-color:                        $secondary;
+$link-hover-color:                  rgba($secondary, .6);
 
 
 :root {
