--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
-<body class="m-2">
+<body>
   {% block content %}
   {% endblock %}
 </body>
