Add ranked assay table; update assay visualization; fix package.json
Make a ranked assay table as its own component and display it as a modal; update assay visualization to draw based on props (still buggy, so not a part of main page now); remove extra comma from package.json

--- a/vue_frontend/src/assets/styles.scss
+++ b/vue_frontend/src/assets/styles.scss
@@ -3,6 +3,8 @@ $btn-font-family:                   'Rubik', -apple-system, BlinkMacSystemFont, 
 
 $primary:                           #000D54;
 $secondary:                         #3C67DD;
+$info:                              #dee2e6;
+$success:                           #36ffbb;
 
 $link-color:                        $secondary;
 $link-hover-color:                  rgba($secondary, .6);
