--- a/vue_frontend/src/assets/styles.scss
+++ b/vue_frontend/src/assets/styles.scss
@@ -1,11 +1,14 @@
+@use "sass:color";
+
 $font-family-sans-serif:            'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
 // $btn-font-family:                   'Rubik', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
 
 $dark:                              #000D54;
 $secondary:                         #3C67DD;
 $info:                              #dee2e6;
-$success:                           #006644;
-$danger:                            #ff365b;
+$success:                           #005C3D;
+$danger:                            #9C0041;
+// $danger:                            #A3001E;
 
 $link-color:                        $secondary;
 $link-hover-color:                  rgba($secondary, .6);
@@ -46,7 +49,7 @@ $footer-height:                     6rem;
 
 // General Page Formatting
 * {
-  letter-spacing: .03em;
+  letter-spacing: 0.03em;
 }
 
 legend, .nav-link, button:not(.list-group-item), th > div, .h1, .h2, .h3, .h4, .h5, .h6, .modal-title {
@@ -70,7 +73,7 @@ body {
 
 // Fade Transitions
 .fade-enter-active, .fade-leave-active {
-  transition: opacity .5s;
+  transition: opacity 0.5s;
 }
 .fade-enter, .fade-leave-to /* .fade-leave-active below version 2.1.8 */ {
   opacity: 0;
@@ -126,19 +129,43 @@ button, input[type=button] {
   min-width: 12rem;
 }
 
-// Part Specific - Submitted Modal
-#submitted-modal .modal-content {
+.add, .delete {
+  min-width: 100%;
+}
+
+.delete-col {
+  padding-right: 0px !important;
+  padding-left: 10px !important;
+}
+
+.custom-control-input:checked ~ .custom-control-label::before {
+  border-color: $secondary;
+  background-color: $secondary;
+}
+
+// Part Specific - Modals
+#success-modal .modal-content {
   color: $success;
-  background-color: rgba(lighten($success, 75%), .95);
+  background-color: color.scale($success, $lightness: 92%, $saturation: -46%);
   border: 0px;
 }
 
-#submitted-modal .modal-content .modal-header {
-  background-color: lighten($success, 75%);
+#success-modal .modal-content .modal-header {
+  background-color: color.scale($success, $lightness: 89%, $saturation: -45%);
 }
 
-#submitted-modal .modal-footer {
+.modal-footer {
   border-top: 0px;
+}
+
+#error-modal .modal-content {
+  color: $danger;
+  background-color: color.scale($danger, $lightness: 93%, $saturation: -46%);
+  border: 0px;
+}
+
+#error-modal .modal-content .modal-header {
+  background-color: color.scale($danger, $lightness: 91%, $saturation: -45%);
 }
 
 // Part Specific - Misc
@@ -171,7 +198,7 @@ button, input[type=button] {
 }
 
 .selected {
-  background-color: rgba(lighten($success, 60%), .5);
+  background-color: rgba(lighten($success, 60%), 0.5);
 }
 
 .selectable, .arrow {
@@ -180,11 +207,11 @@ button, input[type=button] {
 }
 
 .selectable:hover, .selectable:focus {
-  background-color: rgba(lighten($success, 60%), .25);
+  background-color: rgba(lighten($success, 60%), 0.25);
 }
 
 .selected:hover, .selected:focus {
-  background-color: rgba(lighten($success, 60%), .75);
+  background-color: rgba(lighten($success, 60%), 0.75);
 }
 
 .taxon {
