--- a/vue_frontend/src/assets/styles.scss
+++ b/vue_frontend/src/assets/styles.scss
@@ -42,6 +42,7 @@ $footer-height:                     6rem;
   --red: #ff365b;
   --orange: #fd7825;
   --lemon: #f2ff36;
+  --info: #dee2e6;
 }
 
 @import 'node_modules/bootstrap/scss/bootstrap.scss';
@@ -61,6 +62,9 @@ th > div {
   font-weight: 500;
 }
 
+.current-page {
+  font-weight: 600;
+}
 
 html {
   position: relative;
@@ -202,7 +206,7 @@ button, input[type=button] {
 }
 
 .selectable, .arrow {
-  transition: 0.3s;
+  transition: 0.15s;
   line-height: 1.55;
 }
 
