Combine buttons, download premade, restructure modals, fix bugs
Combine downloads and status into show results button, allow downloads for premade assays (as JSON), make assay modal one component, make message modal component use root data rather than props, make FASTA input only accept 1 file, fix validation bug in views.py,

--- a/vue_frontend/src/assets/styles.scss
+++ b/vue_frontend/src/assets/styles.scss
@@ -221,6 +221,12 @@ button:not(.list-group-item):not(.taxon) {
   transform: rotate(180deg);
 }
 
+.tabs .nav-justified .nav-item:last-of-type {
+  flex-basis: 0;
+  flex-grow: 0;
+  text-align: center;
+}
+
 .f-1, .family {
   font-size: 2rem;
 }
