Update security and accessibility features; fix status check via detail
Add descriptions to all pages, actually update status before returning the "detail" response of an ADAPT run, add "noreferrer" to links for security, adjust logo spacing, have run IDs update after the modal is loaded

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block title %}About{% endblock %}
-
+{% block description %}<meta name="description" content="An explanation of what ADAPT (Activity-informed Design with All-inclusive Patrolling of Targets) does and references to learn more.">{% endblock %}
 
 {% block content %}
 
