--- a/templates/designs.html
+++ b/templates/designs.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 
 {% block title %}Assays{% endblock %}
+{% block description %}<meta name="description" content="Premade Cas13a assays for the most common vertebrate infecting viruses, created using ADAPT.">{% endblock %}
 
 
 {% block content %}
