--- a/vue_frontend/src/assets/styles.scss
+++ b/vue_frontend/src/assets/styles.scss
@@ -215,6 +215,7 @@ button:not(.list-group-item):not(.taxon) {
 .logo {
   height: 0.85em;
   padding-bottom: 0.15em;
+  margin-left: -0.05em
 }
 
 .not-collapsed .arrow {
