--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="en">
 {% load static %}
 
 <head>
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Overpass+Mono:wght@300&display=swap" rel="stylesheet">
   <link rel="icon" href="/static/vue/favicon.ico">
-  <meta name="description" content="">
+  {% block description %}{% endblock %}
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
