--- a/templates/designs.html
+++ b/templates/designs.html
@@ -1,7 +1,10 @@
 {% extends 'base.html' %}
 
 {% block title %}Assays{% endblock %}
-{% block description %}<meta name="description" content="Premade Cas13a assays for the most common vertebrate infecting viruses, created using ADAPT.">{% endblock %}
+{% block description %}
+<meta name="description" content="Premade Cas13a assays for the most common vertebrate infecting viruses, created using ADAPT.">
+<link rel="stylesheet" href="https://unpkg.com/vue-multiselect@2.1.0/dist/vue-multiselect.min.css">
+{% endblock %}
 
 
 {% block content %}
